# gakurobo2026_r1

./: .clang-format  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  calc_swerve_gain.py  can_setup.bash  r1_setup.bash  record.bash  requirements.txt
bno086/: CMakeLists.txt  README.md  package.xml
bno086/example/: bno086_subscription_node.cpp  npm_uart_can_node.cpp  npm_uart_test_node.cpp
bno086/include/bno086/: bno086_driver.h  serial_driver.h
bno086/src/: bno086_node.cpp
bno086/test/: test_bno086_driver.cpp
data/: 0_robot_parameter.csv  0_waypoints copy.csv  0_waypoints.csv  0_waypoints.csv.old  1_robot_parameter.csv  1_waypoints.csv  2_robot_parameter.csv  2_waypoints.csv  3_robot_parameter.csv  3_waypoints.csv  4_robot_parameter.csv  4_waypoints.csv  5_waypoints.csv  backup_1_robot_parameter_20260423_213054.csv  backup_1_waypoints_20260423_213054.csv  map3.pgm  map3.yaml
data/blue/: 0_robot_parameter.csv  0_waypoints.csv  1_waypoints.csv  2_waypoints.csv  3_waypoints.csv  4_robot_parameter.csv  4_waypoints.csv  5_waypoints.csv
data/map/: field_blue.pgm  field_blue.xcf  field_blue.yaml  field_red.pgm  field_red.xcf  field_red.yaml  map.pgm  map.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml
data/red/: 0_robot_parameter.csv  1_robot_parameter.csv  1_waypoints.csv  2_robot_parameter.csv  2_waypoints.csv  3_robot_parameter.csv  3_waypoints.csv  4_waypoints.csv  5_robot_parameter.csv
desktop/: r1_auto_blue.desktop  r1_auto_red.desktop  r1_record.desktop  r1_stop.desktop
r1_bringup/: CMakeLists.txt  README.md  package.xml
r1_bringup/config/: r1_machine_config.yaml  r1_sim_config.yaml  r1_slam_config.yaml  test_config.yaml
r1_bringup/docs/: lidar_lifecycle_watchdog_node.md  r1_bringup.launch.md  r1_sim.launch.md  r1_slam.launch.md  remote_debug_client.md  remote_debug_node.md  test_bringup.launch.md  test_slam_toolbox.launch.md
r1_bringup/launch/: lidar_reset.py  r1_bringup.launch.py  r1_sim.launch.py  r1_slam.launch.py  remote_debug_client.py  remote_debug_node.py  test_bringup.launch.py  test_slam_toolbox.launch.py  urg_node2.launch.py
r1_bringup/src/: lidar_lifecycle_watchdog_node.cpp
r1_control/: CMakeLists.txt  README.md  package.xml
r1_control/docs/: r1_chassis_control_node.md  r1_chassis_velocity_control_node.md  r1_dummy_map_node.md  r1_dummy_odometry_node.md  r1_laser_filter_node.md  trajectory_planner.md
r1_control/example/: spline_test_node.cpp  test_minimum_jerk_node.cpp  test_minimum_jerk_plot.py  test_spline_node.cpp  test_spline_plot.py  test_trajectory_planner_node.cpp  test_trajectory_planner_plot.py  test_trapezoid_node.cpp  test_trapezoid_plot.py  trajectory_robot_parameter.csv  trapezoid_test_node.cpp  trapezoid_test_plot.py
r1_control/include/r1_control/: accel_curve.h  accel_designer.h  minimum_jerk.h  pos_follower.h  spline.h  trajectory_follower.h  trajectory_planner.h  trapezoid_designer.h  util.h
r1_control/src/: r1_chassis_control_node.cpp  r1_chassis_velocity_control_node.cpp  r1_dummy_map_node.cpp  r1_dummy_odometry_node.cpp  r1_laser_filter_node.cpp  run_trajectory_planner.py  trajectory_planner.cpp  trajectory_planner_gui.py  trapezoid_designer.cpp
r1_machine/: CMakeLists.txt  README.md  package.xml
r1_machine/docs/: r1_angle_motion_node.md  r1_linear_motion_node.md  r1_machine_manage_node.md  r1_mecanum_node.md  r1_odometry_node.md  r1_sabacan_msgs_converter.md  r1_sabacan_msgs_converter_node.md  r1_swerve_drive_node.md  swerve_drive_viewer.md
r1_machine/example/: swerve_drive_viewer.py
r1_machine/src/: r1_angle_motion_node.cpp  r1_linear_motion_node.cpp  r1_machine_manage_node.cpp  r1_mecanum_node.cpp  r1_odometry_node.cpp  r1_sabacan_msgs_converter_node.cpp  r1_swerve_drive_node.cpp
r1_main/: CMakeLists.txt  package.xml
r1_main/docs/: r1_main_node.md
r1_main/include/r1_main/: ps4.h  r1_main_node.h  simple_trapezoid.h  state_machine.h
r1_main/src/: r1_main_node.cpp  test_node.cpp
r1_msgs/: CMakeLists.txt  package.xml
r1_msgs/msg/: AngleMotion.msg  GpioEscRef.msg  GpioPwmRef.msg  LinearMotion.msg  Mecanum.msg  Motor.msg  MotorRef.msg  OdometryEncoder.msg  R1CollectKfs.msg  R1InitParameter.msg  RobotMove.msg  SwerveDrive.msg
r1_state_machine/: CMakeLists.txt  package.xml
r1_state_machine/include/r1_state_machine/: ps4.h  simple_trapezoid.h  state_machine.h
r1_state_machine/src/: r1_state_machine_node.cpp  test_node.cpp
r1_ui/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
r1_ui/docs/: r1_aruco_display_node.md  r1_aruco_serial_node.md
r1_ui/include/r1_ui/: serial_driver.h
r1_ui/r1_ui/: r1_aruco_display_node.py
r1_ui/scripts/: r1_aruco_display_node
r1_ui/src/: r1_aruco_display_node.py  r1_aruco_serial_node.cpp  r1_controller_gateway_node.cpp
r1_util/: CMakeLists.txt  package.xml
r1_util/include/r1_util/: r1_util.h
scripts/: cam_test.py  list_screen_names.py  publish_r1_param.bash  r1_auto.bash  r1_desktop_setup.bash  r1_manual.bash  r1_setup.bash  r1_stop.bash  record.bash
